cli/src/tui/browse/snapshots/snapshot_browse_btrfs_balance.snap
---
source: cli/src/tui/browse/view.rs
expression: "buffer_to_string(&render(&model, 80, 14))"
---
┌ Pgm ─────┐┌ Cmd ─────────┐┌ Content ─────────────────────────────────────────┐
│> Btrfs   ││  Filesystem  ││No balance found on '/mnt/storage'                │
│  NUT     ││  Devices     ││                                                  │
│          ││  Subvolumes  ││                                                  │
│          ││  Scrub       ││                                                  │
│          ││> Balance     ││                                                  │
│          ││  Quota       ││                                                  │
│          ││  Inspect     ││                                                  │
│          ││              ││                                                  │
│          ││              ││                                                  │
│          ││              ││                                                  │
│          ││              ││                                                  │
└──────────┘└──────────────┘└──────────────────────────────────────────────────┘
$ btrfs balance status ''
