cli/src/tui/browse/snapshots/snapshot_browse_btrfs_devices_usage.snap
---
source: cli/src/tui/browse/view.rs
assertion_line: 493
expression: "buffer_to_string(&render(&model, 80, 14))"
---
┌ Pgm ─────┐┌ Cmd ─────────┐┌ View ────────┐┌ Content ─────────────────────────┐
│> Btrfs   ││  Filesystem  ││> Usage       ││/dev/mapper/braid-disk1, ID: 1    │
│  NUT     ││> Devices     ││  Stats       ││   Device size: 256.00MiB         │
│  Systemd ││  Subvolumes  ││              ││                                  │
│  SMART   ││  Scrub       ││              ││                                  │
│  lsblk   ││  Balance     ││              ││                                  │
│          ││  Quota       ││              ││                                  │
│          ││  Inspect     ││              ││                                  │
│          ││              ││              ││                                  │
│          ││              ││              ││                                  │
│          ││              ││              ││                                  │
│          ││              ││              ││                                  │
└──────────┘└──────────────┘└──────────────┘└──────────────────────────────────┘
$ btrfs device usage /mnt/storage
