cli/src/tui/browse/snapshots/snapshot_browse_btrfs_filesystem_commit_stats.snap
---
source: cli/src/tui/browse/view.rs
assertion_line: 476
expression: "buffer_to_string(&render(&model, 80, 14))"
---
┌ Pgm ─────┐┌ Cmd ─────────┐┌ View ────────┐┌ Content ─────────────────────────┐
│> Btrfs   ││> Filesystem  ││  Usage       ││Commit stats since mount:         │
│  NUT     ││  Devices     ││  Show        ││  Total commits: 42               │
│  Systemd ││  Subvolumes  ││  Df          ││                                  │
│  SMART   ││  Scrub       ││> Commit Stats││                                  │
│  lsblk   ││  Balance     ││              ││                                  │
│          ││  Quota       ││              ││                                  │
│          ││  Inspect     ││              ││                                  │
│          ││              ││              ││                                  │
│          ││              ││              ││                                  │
│          ││              ││              ││                                  │
│          ││              ││              ││                                  │
└──────────┘└──────────────┘└──────────────┘└──────────────────────────────────┘
$ btrfs filesystem commit-stats /mnt/storage
