cli/src/tui/browse/snapshots/snapshot_browse_btrfs_filesystem_show.snap
---
source: cli/src/tui/browse/view.rs
assertion_line: 439
expression: "buffer_to_string(&render(&model, 80, 14))"
---
┌ Pgm ─────┐┌ Cmd ─────────┐┌ View ────────┐┌ Content ─────────────────────────┐
│> Btrfs   ││> Filesystem  ││  Usage       ││Label: none uuid: abc-123         │
│  NUT     ││  Devices     ││> Show        ││Total devices 2                   │
│  Systemd ││  Subvolumes  ││  Df          ││                                  │
│  SMART   ││  Scrub       ││  Commit Stats││                                  │
│  lsblk   ││  Balance     ││              ││                                  │
│          ││  Quota       ││              ││                                  │
│          ││  Inspect     ││              ││                                  │
│          ││              ││              ││                                  │
│          ││              ││              ││                                  │
│          ││              ││              ││                                  │
│          ││              ││              ││                                  │
└──────────┘└──────────────┘└──────────────┘└──────────────────────────────────┘
$ btrfs filesystem show /mnt/storage
