cli/src/tui/browse/snapshots/snapshot_browse_btrfs_inspect_chunks.snap
---
source: cli/src/tui/browse/view.rs
assertion_line: 683
expression: "buffer_to_string(&render(&model, 80, 14))"
---
┌ Pgm ─────┐┌ Cmd ─────────┐┌ View ────────┐┌ Content ─────────────────────────┐
│> Btrfs   ││  Filesystem  ││> Chunks      ││Devid PNumber Type/profile PStart │
│  NUT     ││  Devices     ││              ││1 1 Data/RAID1 1.00MiB 64.00MiB   │
│  Systemd ││  Subvolumes  ││              ││                                  │
│  SMART   ││  Scrub       ││              ││                                  │
│  lsblk   ││  Balance     ││              ││                                  │
│          ││  Quota       ││              ││                                  │
│          ││> Inspect     ││              ││                                  │
│          ││              ││              ││                                  │
│          ││              ││              ││                                  │
│          ││              ││              ││                                  │
│          ││              ││              ││                                  │
└──────────┘└──────────────┘└──────────────┘└──────────────────────────────────┘
$ btrfs inspect-internal list-chunks '--sort=devid,pstart' /mnt/storage
