cli/src/tui/browse/snapshots/snapshot_browse_btrfs_scrub.snap
---
source: cli/src/tui/browse/view.rs
expression: "buffer_to_string(&render(&model, 80, 14))"
---
┌ Pgm ─────┐┌ Cmd ─────────┐┌ Content ─────────────────────────────────────────┐
│> Btrfs   ││  Filesystem  ││UUID: abc-123                                     │
│  NUT     ││  Devices     ││Scrub started: Tue Feb 24 02:00:00 2026           │
│          ││  Subvolumes  ││                                                  │
│          ││> Scrub       ││                                                  │
│          ││  Balance     ││                                                  │
│          ││              ││                                                  │
│          ││              ││                                                  │
│          ││              ││                                                  │
│          ││              ││                                                  │
│          ││              ││                                                  │
│          ││              ││                                                  │
└──────────┘└──────────────┘└──────────────────────────────────────────────────┘
$ btrfs scrub status ''
