cli/src/tui/browse/snapshots/snapshot_browse_btrfs_scrub_limits.snap
---
source: cli/src/tui/browse/view.rs
expression: "buffer_to_string(&render(&model, 80, 14))"
---
┌ Pgm ─────┐┌ Cmd ─────────┐┌ View ────────┐┌ Content ─────────────────────────┐
│> Btrfs   ││  Filesystem  ││  Status      ││Device 1: scrub limit 0B (unlimite│
│  NUT     ││  Devices     ││> Limits      ││                                  │
│          ││  Subvolumes  ││              ││                                  │
│          ││> Scrub       ││              ││                                  │
│          ││  Balance     ││              ││                                  │
│          ││  Quota       ││              ││                                  │
│          ││  Inspect     ││              ││                                  │
│          ││              ││              ││                                  │
│          ││              ││              ││                                  │
│          ││              ││              ││                                  │
│          ││              ││              ││                                  │
└──────────┘└──────────────┘└──────────────┘└──────────────────────────────────┘
$ btrfs scrub limit ''
