cli/src/tui/browse/snapshots/snapshot_browse_btrfs_subvolumes.snap
---
source: cli/src/tui/browse/view.rs
assertion_line: 548
expression: "buffer_to_string(&render(&model, 80, 14))"
---
┌ Pgm ─────┐┌ Cmd ─────────┐┌ View ────────┐┌ Content ─────────────────────────┐
│> Btrfs   ││  Filesystem  ││> List        ││   ID     Gen    Top    Path      │
│  NUT     ││  Devices     ││  Full        ││>  256    10     5      data      │
│  Systemd ││> Subvolumes  ││  Snapshots   ││                                  │
│  SMART   ││  Scrub       ││  Deleted     ││                                  │
│  lsblk   ││  Balance     ││  Default     ││                                  │
│          ││  Quota       ││              ││                                  │
│          ││  Inspect     ││              ││                                  │
│          ││              ││              ││                                  │
│          ││              ││              ││                                  │
│          ││              ││              ││                                  │
│          ││              ││              ││                                  │
└──────────┘└──────────────┘└──────────────┘└──────────────────────────────────┘
$ btrfs subvolume list ''
